--- a/make/makefile
+++ b/make/makefile
@@ -1,118 +1,118 @@
 all: bison flex start
 
 bison:
-	win_bison.exe -d -y -v ..\main\golang.y
+	win_bison.exe -d -y -v ..\main\polynoms.y
 flex:
-	win_flex.exe ..\main\golang.l
-	gcc y.tab.c lex.yy.c -o ..\golang -lm
+	win_flex.exe ..\main\polynoms.l
+	gcc y.tab.c lex.yy.c -o ..\polynoms -lm
 clear:
 	del y.tab.c
 	del y.tab.h
 	del lex.yy.c
 	del y.output
-	del ..\golang.exe
+	del ..\polynoms.exe
 	del ..\output.txt
 start:
-	../golang.exe ../test.txt
+	../polynoms.exe ../test.txt
 
 tests: 
-	../golang.exe ../tests/test1.txt
-	../golang.exe ../tests/test2.txt
-	../golang.exe ../tests/test3.txt
-	../golang.exe ../tests/test4.txt
-	../golang.exe ../tests/test5.txt
-	../golang.exe ../tests/test6.txt
-	../golang.exe ../tests/test7.txt
-	../golang.exe ../tests/test8.txt
-	../golang.exe ../tests/test9.txt
-	../golang.exe ../tests/test10.txt
-	../golang.exe ../tests/test11.txt
-	../golang.exe ../tests/test12.txt
-	../golang.exe ../tests/test13.txt
-	../golang.exe ../tests/test14.txt
-	../golang.exe ../tests/test15.txt
-	../golang.exe ../tests/test16.txt
-	../golang.exe ../tests/test17.txt
-	../golang.exe ../tests/test18.txt
-	../golang.exe ../tests/test19.txt
-	../golang.exe ../tests/test20.txt
-	../golang.exe ../tests/test21.txt
-	../golang.exe ../tests/test22.txt
-	../golang.exe ../tests/test23.txt
-	../golang.exe ../tests/test24.txt
-	../golang.exe ../tests/test25.txt
-	../golang.exe ../tests/test26.txt
-	../golang.exe ../tests/test27.txt
-	../golang.exe ../tests/test28.txt
-	../golang.exe ../tests/test29.txt
-	../golang.exe ../tests/test30.txt
-	../golang.exe ../tests/test31.txt
-	../golang.exe ../tests/test32.txt
-	../golang.exe ../tests/test33.txt
-	../golang.exe ../tests/test34.txt
-	../golang.exe ../tests/test35.txt
-	../golang.exe ../tests/test36.txt
-	../golang.exe ../tests/test37.txt
-	../golang.exe ../tests/test38.txt
-	../golang.exe ../tests/test39.txt
-	../golang.exe ../tests/test40.txt
-	../golang.exe ../tests/test41.txt
-	../golang.exe ../tests/test42.txt
-	../golang.exe ../tests/test43.txt
-	../golang.exe ../tests/test44.txt
-	../golang.exe ../tests/test45.txt
-	../golang.exe ../tests/test46.txt
-	../golang.exe ../tests/test47.txt
-	../golang.exe ../tests/test48.txt
-	../golang.exe ../tests/test49.txt
-	../golang.exe ../tests/test50.txt
-	../golang.exe ../tests/test51.txt
-	../golang.exe ../tests/test52.txt
-	../golang.exe ../tests/test53.txt
-	../golang.exe ../tests/test54.txt
-	../golang.exe ../tests/test55.txt
-	../golang.exe ../tests/test56.txt
-	../golang.exe ../tests/test57.txt
-	../golang.exe ../tests/test58.txt
-	../golang.exe ../tests/test59.txt
-	../golang.exe ../tests/test60.txt
-	../golang.exe ../tests/test61.txt
-	../golang.exe ../tests/test62.txt
-	../golang.exe ../tests/test63.txt
-	../golang.exe ../tests/test64.txt
-	../golang.exe ../tests/test65.txt
-	../golang.exe ../tests/test66.txt
-	../golang.exe ../tests/test67.txt
-	../golang.exe ../tests/test68.txt
-	../golang.exe ../tests/test69.txt
-	../golang.exe ../tests/test70.txt
-	../golang.exe ../tests/test71.txt
-	../golang.exe ../tests/test72.txt
-	../golang.exe ../tests/test73.txt
-	../golang.exe ../tests/test74.txt
-	../golang.exe ../tests/test75.txt
-	../golang.exe ../tests/test76.txt
-	../golang.exe ../tests/test77.txt
-	../golang.exe ../tests/test78.txt
-	../golang.exe ../tests/test79.txt
-	../golang.exe ../tests/test80.txt
-	../golang.exe ../tests/test81.txt
-	../golang.exe ../tests/test82.txt
-	../golang.exe ../tests/test83.txt
-	../golang.exe ../tests/test84.txt
-	../golang.exe ../tests/test85.txt
-	../golang.exe ../tests/test86.txt
-	../golang.exe ../tests/test87.txt
-	../golang.exe ../tests/test88.txt
-	../golang.exe ../tests/test89.txt
-	../golang.exe ../tests/test90.txt
-	../golang.exe ../tests/test91.txt
-	../golang.exe ../tests/test92.txt
-	../golang.exe ../tests/test93.txt
-	../golang.exe ../tests/test94.txt
-	../golang.exe ../tests/test95.txt
-	../golang.exe ../tests/test96.txt
-	../golang.exe ../tests/test97.txt
-	../golang.exe ../tests/test98.txt
-	../golang.exe ../tests/test99.txt
-	../golang.exe ../tests/test100.txt
+	../polynoms.exe ../tests/test1.txt
+	../polynoms.exe ../tests/test2.txt
+	../polynoms.exe ../tests/test3.txt
+	../polynoms.exe ../tests/test4.txt
+	../polynoms.exe ../tests/test5.txt
+	../polynoms.exe ../tests/test6.txt
+	../polynoms.exe ../tests/test7.txt
+	../polynoms.exe ../tests/test8.txt
+	../polynoms.exe ../tests/test9.txt
+	../polynoms.exe ../tests/test10.txt
+	../polynoms.exe ../tests/test11.txt
+	../polynoms.exe ../tests/test12.txt
+	../polynoms.exe ../tests/test13.txt
+	../polynoms.exe ../tests/test14.txt
+	../polynoms.exe ../tests/test15.txt
+	../polynoms.exe ../tests/test16.txt
+	../polynoms.exe ../tests/test17.txt
+	../polynoms.exe ../tests/test18.txt
+	../polynoms.exe ../tests/test19.txt
+	../polynoms.exe ../tests/test20.txt
+	../polynoms.exe ../tests/test21.txt
+	../polynoms.exe ../tests/test22.txt
+	../polynoms.exe ../tests/test23.txt
+	../polynoms.exe ../tests/test24.txt
+	../polynoms.exe ../tests/test25.txt
+	../polynoms.exe ../tests/test26.txt
+	../polynoms.exe ../tests/test27.txt
+	../polynoms.exe ../tests/test28.txt
+	../polynoms.exe ../tests/test29.txt
+	../polynoms.exe ../tests/test30.txt
+	../polynoms.exe ../tests/test31.txt
+	../polynoms.exe ../tests/test32.txt
+	../polynoms.exe ../tests/test33.txt
+	../polynoms.exe ../tests/test34.txt
+	../polynoms.exe ../tests/test35.txt
+	../polynoms.exe ../tests/test36.txt
+	../polynoms.exe ../tests/test37.txt
+	../polynoms.exe ../tests/test38.txt
+	../polynoms.exe ../tests/test39.txt
+	../polynoms.exe ../tests/test40.txt
+	../polynoms.exe ../tests/test41.txt
+	../polynoms.exe ../tests/test42.txt
+	../polynoms.exe ../tests/test43.txt
+	../polynoms.exe ../tests/test44.txt
+	../polynoms.exe ../tests/test45.txt
+	../polynoms.exe ../tests/test46.txt
+	../polynoms.exe ../tests/test47.txt
+	../polynoms.exe ../tests/test48.txt
+	../polynoms.exe ../tests/test49.txt
+	../polynoms.exe ../tests/test50.txt
+	../polynoms.exe ../tests/test51.txt
+	../polynoms.exe ../tests/test52.txt
+	../polynoms.exe ../tests/test53.txt
+	../polynoms.exe ../tests/test54.txt
+	../polynoms.exe ../tests/test55.txt
+	../polynoms.exe ../tests/test56.txt
+	../polynoms.exe ../tests/test57.txt
+	../polynoms.exe ../tests/test58.txt
+	../polynoms.exe ../tests/test59.txt
+	../polynoms.exe ../tests/test60.txt
+	../polynoms.exe ../tests/test61.txt
+	../polynoms.exe ../tests/test62.txt
+	../polynoms.exe ../tests/test63.txt
+	../polynoms.exe ../tests/test64.txt
+	../polynoms.exe ../tests/test65.txt
+	../polynoms.exe ../tests/test66.txt
+	../polynoms.exe ../tests/test67.txt
+	../polynoms.exe ../tests/test68.txt
+	../polynoms.exe ../tests/test69.txt
+	../polynoms.exe ../tests/test70.txt
+	../polynoms.exe ../tests/test71.txt
+	../polynoms.exe ../tests/test72.txt
+	../polynoms.exe ../tests/test73.txt
+	../polynoms.exe ../tests/test74.txt
+	../polynoms.exe ../tests/test75.txt
+	../polynoms.exe ../tests/test76.txt
+	../polynoms.exe ../tests/test77.txt
+	../polynoms.exe ../tests/test78.txt
+	../polynoms.exe ../tests/test79.txt
+	../polynoms.exe ../tests/test80.txt
+	../polynoms.exe ../tests/test81.txt
+	../polynoms.exe ../tests/test82.txt
+	../polynoms.exe ../tests/test83.txt
+	../polynoms.exe ../tests/test84.txt
+	../polynoms.exe ../tests/test85.txt
+	../polynoms.exe ../tests/test86.txt
+	../polynoms.exe ../tests/test87.txt
+	../polynoms.exe ../tests/test88.txt
+	../polynoms.exe ../tests/test89.txt
+	../polynoms.exe ../tests/test90.txt
+	../polynoms.exe ../tests/test91.txt
+	../polynoms.exe ../tests/test92.txt
+	../polynoms.exe ../tests/test93.txt
+	../polynoms.exe ../tests/test94.txt
+	../polynoms.exe ../tests/test95.txt
+	../polynoms.exe ../tests/test96.txt
+	../polynoms.exe ../tests/test97.txt
+	../polynoms.exe ../tests/test98.txt
+	../polynoms.exe ../tests/test99.txt
+	../polynoms.exe ../tests/test100.txt
